<resources>
    <string name="app_name">Gif Zone</string>
    <string name="attribution">Powered by giphy.com</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Fragment Titles -->
    <string name="fragment_top_title">Top Gifs</string>
    <string name="fragment_categories_title">Categories</string>
    <string name="fragment_favorites_titile">Favorites</string>

    <string-array name="homeArr">
        <item>Top</item>
        <item>Categories</item>
        <item>Favorites</item>


    </string-array>

    <string-array name="categoriesArr">
        <item>love</item>
        <item>yes</item>
        <item>no</item>
        <item>awww</item>
        <item>cuddle</item>
        <item>funny</item>
        <item>bye</item>
        <item>angry</item>
        <item>good morning</item>
        <item>good night</item>

    </string-array>

    <!--Categories URLS-->
    <string-array name="categoriesArrURLS">
        <item>https://media4.giphy.com/media/26BRED0APH6fRa1sk/200w_d.gif</item>
        <item>https://media3.giphy.com/media/S3Ot3hZ5bcy8o/200w_d.gif</item>
        <item>https://media2.giphy.com/media/RddAJiGxTPQFa/200w_d.gif</item>
        <item>https://media3.giphy.com/media/xTiTniMqpYz1KJ5Wik/200w_d.gif</item>
        <item>https://media3.giphy.com/media/l41YnUj6ofOCl6DsY/200w_d.gif</item>
        <item>https://media1.giphy.com/media/ZqlvCTNHpqrio/200w_d.gif</item>
        <item>https://media1.giphy.com/media/UQaRUOLveyjNC/200w_d.gif</item>
        <item>https://media0.giphy.com/media/p8Uw3hzdAE2dO/200w_d.gif</item>
        <item> https://media4.giphy.com/media/l0NwSvw3kQWZuUW8E/200w_d.gif</item>
        <item>https://media1.giphy.com/media/NWg7M1VlT101W/200w_d.gif</item>

    </string-array>

    <string name="widget_nodata">No data to show</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <!--errors -->
    <string name="network_error">Please check your network connection!</string>
    <string name="other_error">Something went wrong. Please try again after sometime!</string>
    <string name="no_fav_error">No favorites to show!</string>
    <string name="whatsapp_error">Whatsapp not installed!</string>
    <string name="fb_error">Facebook not installed!</string>

    <!--content descriptions-->
    <string name="content_favorite">Add to favorite</string>
    <string name="content_whatsapp_share">Share with Whatsapp</string>
    <string name="content_fb_share">Share with FB</string>
    <string name="content_gallery_save">Save to Gallery</string>
    <string name="content_share">Share</string>
    <string name="detail_img">Detail Image</string>
    <string name="content_widget_img">Widget Image</string>


    <string name="allow_access">You need to allow access to Gallery</string>
    <string name="access_denied">Gallery access denied</string>
    <string name="wait_msg">Please wait ..</string>

    <!--sucess-->
    <string name="success_gallery">Successfully saved to Gallery!!</string>

    <!--search-->
    <string name="search_hint">Search gifs</string>

</resources>
