<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.moudgil.gifzone.fragments.DetailFragment">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  >

    <ImageView
        android:id="@+id/detail_img"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_img_height"
        android:transitionName="gif_transition"
        android:layout_margin="@dimen/detail_img_margin"
        />

    <LinearLayout
        android:id="@+id/share_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/detail_img"
        android:layout_marginTop="50dp"
        >
        <ImageView
            android:id="@+id/favorite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:transitionName="gif_transition"
            android:layout_margin="@dimen/detail_img_margin"
            android:src="@mipmap/ic_launcher"
            android:layout_weight="1"
            android:contentDescription="@string/content_favorite"
            />
        <ImageView
            android:id="@+id/fb_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:transitionName="gif_transition"
            android:layout_margin="@dimen/detail_img_margin"
            android:src="@mipmap/ic_launcher"
            android:layout_weight="1"
            android:contentDescription="@string/content_fb_share"
            />
        <ImageView
            android:id="@+id/whatsapp_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:transitionName="gif_transition"
            android:layout_margin="@dimen/detail_img_margin"
            android:src="@mipmap/ic_launcher"
            android:layout_weight="1"
            android:contentDescription="@string/content_whatsapp_share"

            />
        <ImageView
            android:id="@+id/share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:transitionName="gif_transition"
            android:layout_margin="@dimen/detail_img_margin"
            android:src="@mipmap/ic_launcher"
            android:layout_weight="1"
            android:contentDescription="@string/content_share"

            />
        <ImageView
            android:id="@+id/gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:transitionName="gif_transition"
            android:layout_margin="@dimen/detail_img_margin"
            android:src="@mipmap/ic_launcher"
            android:layout_weight="1"
            android:contentDescription="@string/content_gallery_save"

            />


    </LinearLayout>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_below="@id/share_container"/>

</RelativeLayout>
</ScrollView>